# rescuer_project

./: .gitignore  CMakeLists.txt  README.md  package.xml  plugin.xml  setup.py
cmd/: cmd.txt
include/rescuer_project/: centralwidget.h  lineeditteleop.h  main_window.h  rescuer_widget.h
launch/: launch_drone.launch  launch_droneBackup.launch  launch_dronePack.launch  sample.launch
nodes/: followpoint_drone.py  gotogether.py  gotogether_quad.py  plot_position_error.py  position_rescuer.py  predict_z.py  quad_blob_tracker.py  replace_z.py  send_point.py
report/: bib.bib  corob_report.tex  perAndManip_report.tex
script/: droneClass.py  takeoff.py
script/rescuer_project/: takeoff.py
scripts/rescuer_project/: droneClass.py  takeoff.py
src/drone_node/: takeoff.py
src/launch/: rescue.launch
src/rescuer_project/: centralwidget.cpp  lineeditteleop.cpp  main_window.cpp  main_window.ui  rescuer_widget.cpp
